--- a/configs/tpuv4.cfg
+++ b/configs/tpuv4.cfg
@@ -1,5 +1,5 @@
 [general]
-run_name = scale_example_run_32x32_os
+run_name = scale_example_TPUv4
 
 [architecture_presets]
 ArrayHeight:    128
@@ -10,18 +10,8 @@ OfmapSramSzkB:   8192
 IfmapOffset:    0
 FilterOffset:   10000000
 OfmapOffset:    20000000
-Bandwidth : 60
+Bandwidth : 1024
 Dataflow : ws
-
-[layout]
-IfmapCustomLayout: False
-FilterCustomLayout: False
-IfmapSRAMBankBandwidth: 1024
-IfmapSRAMBankNum: 32
-IfmapSRAMBankPort: 1
-FilterSRAMBankBandwidth: 1024
-FilterSRAMBankNum: 32
-FilterSRAMBankPort: 1
 
 [run_presets]
 InterfaceBandwidth: USER 
